--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -24,7 +24,7 @@
 }
 #hideAll {
   display: none;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0px;
@@ -399,12 +399,12 @@ li.lang_active > a {
 
 #footer {
   width: 100%;
-  height: 35px;
+  height: 38px;
   font-size: 0.85em;
   background-color: #333;
   z-index: 1001;
   position: fixed;
-  bottom: 0;
+  bottom: 20px;
   border-top: 1px solid #fff;
   .btn-small {
     background: transparent;
@@ -422,7 +422,19 @@ li.lang_active > a {
     color: #000000;
   }
 }
-
+#sub-footer {
+    background-color: #f7f7f7;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    .container {
+        div {
+            text-align: center;
+        }
+    }
+}
 .text-muted {
   float: left;
   margin: 10px 0 6px 0;
