--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-variables";
-.form-control, .input-group-addon, button, input[readonly] {
+.form-control, .input-group-addon, button:not(.navbar-toggle), input[readonly] {
   height: 2.0em;
   border: .13333em solid #b7b7b7;
   border-radius: .13333em;
@@ -10,12 +10,12 @@
 .cal-unit-container {
   margin-top: 4px;
   width: 100%;
-  height: 9vh;
+  height: 6.5vh;
   font-size: 2em;
 }
 .GU-solid, .WO-solid {
   padding: 0.6vh;
-  font-size: 2.75vh;
+  font-size: 1.75vh;
 }
 .GU-solid:hover {
   background-color: rgba(144, 50, 198, 0.5);
@@ -118,7 +118,9 @@ label {
   span {
     display: inline-block;
   }
-
+    #res_header_text {
+        display: inline-block;
+    }
 }
 [id^="hider_"] {
   cursor: pointer;
@@ -152,106 +154,23 @@ label {
   right: -9px;
 }
 
-/**
-
- */
-#free_beds_container {
-  position: fixed;
-  right: 0px;
-  z-index: 10;
-  background-color: white;
-  #free_beds {
-    position: fixed;
-    top: 13.5vh;
-    right: 0;
-    z-index: 10;
-    cursor: pointer;
-    background-color: $brand-danger;
-    color: white;
-    i {
-      font-size: 1.25em;
-      color: #fff;
-      padding: 0.45em 0.45em 0.45em 0.3em;
-    }
-    .text {
-      font-size: 1.3em;
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: rl-bt;
-      display: inherit;
-      padding: 0.2em 0.05em 0.2em 0.2em;
-    }
-  }
-
-  #all-free-beds {
-    position: absolute;
-    right: 0;
-    width: 125px;
-    border: 2px solid $brand-danger;
-    padding: 0.35em;
-    max-height: 300px;
-    overflow-x: auto;
-    background-color: white;
-    display: none;
+#all-free-beds {
+    max-height: 350px;
+    overflow: auto;
     .tooMuchBeds {
-      color: $brand-danger;
-      border: 2px solid $brand-danger;
-      font-weight: bold;
-      padding: 0px 0 0 5px;
-      margin: 0 0 0 -5px;
-      border-left: none;
+        color: $brand-danger;
+        border: 2px solid $brand-danger;
+        font-weight: bold;
+        padding: 0px 0 0 5px;
+        margin: 0 0 0 -5px;
+        border-left: none;
     }
-    #all-free-beds_title {
-        position: relative;
-        left: 0;
-        width: 100%;
-        height: 1.7em;
-        background: $brand-danger;
-        padding: 0.2em;
-        color: white;
-    }
-  }
 }
 #reservationInfo {
   padding: 0 0 0.25em 0;
 }
-#timeliner-container {
-  position: fixed;
-  left: 0;
-  z-index: 10;
-  background-color: white;
-  #timeliner-div {
-    .text {
-      font-size: 1.35em;
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: rl-bt;
-      display: inherit;
-      padding: 0.1em 0.05em 0.2em 0.1em;
-    }
-    i {
-      font-size: 1.25em;
-      color: #fff;
-      padding: 0.45em 0.45em 0.45em 0.3em;
-    }
-    cursor: pointer;
-    position: fixed;
-    left: 0px;
-    top: 13.5vh;
-    z-index: 10;
+
+#timeliner {
+    max-height: 350px;
     overflow: auto;
-    color: white;
-    background-color: #b7282e;
-  }
-  #timeliner {
-    position: absolute;
-    left: 0;
-    border: 2px solid #b7282e;
-    padding: 0.135em;
-    max-height: 300px;
-    overflow-x: auto;
-    background-color: white;
-    display: none;
-    width: 129px;
-  }
 }
