--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -1,3 +1,10 @@
+.noClick {
+  pointer-events: none; }
+
+.giveFocus {
+  border-color: #b7282e !important;
+  box-shadow: 0 0 5px rgba(183, 40, 46, 0.4) !important; }
+
 .form-control, .input-group-addon, button:not(.navbar-toggle), input[readonly] {
   height: 2.0em;
   border: .13333em solid #b7b7b7;
@@ -39,7 +46,7 @@
     padding: .1333em .43333em; }
 
 .v3-disabled {
-  cursor: not-allowed;
+  cursor: not-allowed !important;
   background-color: #eeeeee;
   opacity: 1; }
 
@@ -93,6 +100,9 @@ label {
   margin-top: 2vh;
   position: relative; }
 
+#guests_date_0 {
+  display: none; }
+
 .hide-guest {
   display: inline-block;
   position: absolute;
@@ -140,16 +150,36 @@ label {
   top: -5px;
   right: -9px; }
 
-#all-free-beds {
-  max-height: 350px;
-  overflow: auto; }
-  #all-free-beds .tooMuchBeds {
+#all-free-beds-container {
+  position: fixed;
+  bottom: 58px;
+  right: 8.7vw;
+  display: none; }
+  #all-free-beds-container #free-beds-title {
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 15vh;
+    left: -4.3vw;
+    background-color: #b7282e !important;
+    color: white !important;
+    padding: 0.25em 0.5em;
+    font-size: 1.2em; }
+  #all-free-beds-container .close-icon {
     color: #b7282e;
-    border: 2px solid #b7282e;
-    font-weight: bold;
-    padding: 0px 0 0 5px;
-    margin: 0 0 0 -5px;
-    border-left: none; }
+    padding: 0.25em 0.5em;
+    cursor: pointer; }
+  #all-free-beds-container #all-free-beds {
+    max-height: 350px;
+    overflow: auto;
+    display: block;
+    background-color: #333;
+    color: white; }
+    #all-free-beds-container #all-free-beds [id^="free-beds_"] {
+      padding: 0.25em 0.5em; }
+    #all-free-beds-container #all-free-beds .tooMuchBeds {
+      color: #b7282e;
+      font-weight: bold;
+      background-color: #f7f7f7; }
 
 #reservationInfo {
   padding: 0 0 0.25em 0; }
