--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -29,6 +29,14 @@
 .WO-solid:hover {
   background-color: rgba(255, 66, 0, 0.5); }
 
+.WO-border {
+  background: rgba(255, 66, 0, 0.18) !important;
+  border-radius: 0 !important; }
+
+.GU-border {
+  background: rgba(144, 50, 198, 0.18) !important;
+  border-radius: 0 !important; }
+
 .show_reservation_guest {
   margin: 0;
   font-size: 1.2em;
