--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -1,3 +1,19 @@
+.alert {
+  display: none;
+  position: fixed;
+  width: 100%;
+  top: 58px;
+  z-index: 10000;
+  left: 0;
+  border: navajowhite;
+  border-radius: 0;
+  font-size: 1.5em; }
+  .alert button {
+    height: inherit !important;
+    border: none !important; }
+    .alert button span {
+      font-size: 1.5em; }
+
 .noClick {
   pointer-events: none; }
 
@@ -24,18 +40,24 @@
   font-size: 1.75vh; }
 
 .GU-solid:hover {
-  background-color: rgba(144, 50, 198, 0.5); }
+  background-color: rgba(0, 0, 225, 0.5); }
 
 .WO-solid:hover {
-  background-color: rgba(255, 66, 0, 0.5); }
+  background-color: rgba(255, 40, 0, 0.5); }
 
-.WO-border {
-  background: rgba(255, 66, 0, 0.18) !important;
+.WO-datepicker-content {
+  background: rgba(255, 40, 0, 0.18) !important;
   border-radius: 0 !important; }
 
-.GU-border {
-  background: rgba(144, 50, 198, 0.18) !important;
+.GU-datepicker-content {
+  background: rgba(0, 0, 225, 0.18) !important;
   border-radius: 0 !important; }
+
+.WO-datepicker-title {
+  color: rgba(255, 40, 0, 0.5) !important; }
+
+.GU-datepicker-title {
+  color: rgba(0, 0, 225, 0.5) !important; }
 
 .show_reservation_guest {
   margin: 0;
@@ -112,15 +134,15 @@ label {
   display: none; }
 
 .hide-guest {
-  display: inline-block;
-  position: absolute;
+  display: block;
+  position: relative;
   top: -15px;
-  left: 10px;
-  height: 27px;
+  left: 4px;
+  height: 39px;
   padding: 0px 9px;
   margin: 1px;
   background-color: white;
-  font-size: 1.1em;
+  font-size: 1.2em;
   cursor: pointer;
   font-weight: bold; }
   .hide-guest span {
@@ -129,7 +151,8 @@ label {
     display: inline-block; }
 
 [id^="hider_"] {
-  cursor: pointer; }
+  cursor: pointer;
+  font-size: 1.2em; }
 
 [id^="hide_guest_"], #hide_res {
   display: inline;
@@ -162,16 +185,19 @@ label {
   position: fixed;
   bottom: 58px;
   right: 8.7vw;
-  display: none; }
+  display: none;
+  z-index: 1000; }
   #all-free-beds-container #free-beds-title {
     position: absolute;
     transform: rotate(-90deg);
     top: 15vh;
-    left: -4.3vw;
+    left: auto;
     background-color: #b7282e !important;
     color: white !important;
     padding: 0.25em 0.5em;
-    font-size: 1.2em; }
+    font-size: 1.2em;
+    right: 66px;
+    width: 113px; }
   #all-free-beds-container .close-icon {
     color: #b7282e;
     padding: 0.25em 0.5em;
@@ -195,5 +221,15 @@ label {
 #timeliner {
   max-height: 350px;
   overflow: auto; }
+
+.datepicker table tr td.disabled {
+  cursor: not-allowed !important; }
+.datepicker table tr td.today {
+  color: #000;
+  background-color: #ffdb99 !important;
+  border-color: #ffb733 !important; }
+.datepicker table tr td.active {
+  background-color: #337ab7 !important;
+  border-color: #2e6da4 !important; }
 
 /*# sourceMappingURL=new_reservation.css.map */
