--- a/public/assets/scss/navbar.scss
+++ b/public/assets/scss/navbar.scss
@@ -119,13 +119,15 @@
 }
 
 .navbar {
-  position: fixed;
-  width: 100%;
-  z-index: 1001;
-  border-radius: 0px;
-  border-bottom: 1px solid white;
-  background-color: #333;
+    position: fixed;
+    width: 100%;
+    z-index: 1001;
+    border-radius: 0px;
+    border-bottom: 1px solid white;
+    background-color: #333;
     min-height: 58px !important;
+    border-left: none;
+    border-right: none;
 }
 #main-nav-container {
   z-index: 11;
