pre: guest entries not loading

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6543,7 +6543,9 @@ table.tablesorter, table.tablesorter thead tr th {
   border: 1px solid red; }
 
 #loadergif {
-  width: 45px; }
+  width: 50px;
+  display: block;
+  margin: 40vh auto; }
 
 #loading {
   position: fixed;
