--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -306,7 +306,9 @@ table.tablesorter, table.tablesorter thead tr th {
 }
 
 #loadergif {
-  width: 45px;
+    width: 50px;
+    display: block;
+    margin: 40vh auto;
 }
 
 #loading {
