--- a/public/assets/scss/_bootstrap-variables.scss
+++ b/public/assets/scss/_bootstrap-variables.scss
@@ -46,7 +46,7 @@ $btn-default-bg: #f7f7f7;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
- $font-family-sans-serif:  'Ubuntu', sans-serif;
+ $font-family-sans-serif:  "Arial", sans-serif;
 //$font-family-serif:
 //* Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
