--- a/public/assets/scss/datatables_roomapp.scss
+++ b/public/assets/scss/datatables_roomapp.scss
@@ -1,3 +1,13 @@
+.dataTables_scrollHeadInner {
+    table {
+        thead {
+            tr {
+                th {
+                    box-sizing: initial !important;
+                }
+            }
+        }    }
+}
 #users {
     tbody {
         tr {
@@ -37,4 +47,5 @@
             }
         }
     }
+
 }
