--- a/public/assets/scss/navbar.scss
+++ b/public/assets/scss/navbar.scss
@@ -128,6 +128,21 @@
     border-left: none;
     border-right: none;
 }
-#main-nav-container {
+.navbar-header {
   z-index: 11;
+    ul {
+        padding-left: 8px;
+        margin-bottom: 2px;
+        .title {
+            font-size: 1.2em;
+            font-weight: bold;
+            display: inline-block;
+            a {
+                color: #f7f7f7;
+            }
+        }
+    }
+
+}
+.navbar-header {
 }
